# plex-webhook-rust

./: Cargo.toml  README.md
src/: main.rs  plex.rs
